Refactor build process and server initialization for Strapi
- Updated the build script in package.json to ensure the dist/config directory is created before copying the database configuration file.
- Replaced the start command in package.json to run the server using node server.js instead of Strapi's built-in start command.
- Introduced a new server.js file to initialize and start the Strapi application, enhancing the application's startup process.
- Removed the obsolete database.ts file, streamlining the project structure.

--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "private": true,
   "description": "A Strapi application",
   "scripts": {
-    "build": "strapi build && cp config/database.js dist/config/ 2>/dev/null || true",
+    "build": "strapi build && mkdir -p dist/config && cp config/database.js dist/config/",
     "console": "strapi console",
     "deploy": "strapi deploy",
     "dev": "strapi develop",
     "develop": "strapi develop",
-    "start": "strapi start",
+    "start": "node server.js",
     "strapi": "strapi",
     "upgrade": "npx @strapi/upgrade latest",
     "upgrade:dry": "npx @strapi/upgrade latest --dry"
