Update package dependencies and enhance database configuration
- Added PostgreSQL support by including the 'pg' package in package.json and package-lock.json.
- Introduced a new database.ts file to manage database connections for MySQL, PostgreSQL, and SQLite, improving configurability.
- Updated build command in railway.json to ensure proper build execution during deployment.

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "description": "A Strapi application",
   "scripts": {
-    "build": "strapi build && mkdir -p dist/config && cp config/database.js dist/config/",
+    "build": "strapi build",
     "console": "strapi console",
     "deploy": "strapi deploy",
     "dev": "strapi develop",
@@ -19,6 +19,7 @@
     "@strapi/plugin-users-permissions": "5.36.0",
     "@strapi/strapi": "5.36.0",
     "better-sqlite3": "12.4.1",
+    "pg": "^8.17.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.0.0",
