Update TypeScript configuration in tsconfig.json to include additional file patterns
- Revised the "include" section to specify TypeScript and JavaScript files in the config and src directories, as well as JSON files in the src directory, enhancing the project's type-checking capabilities.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,14 +16,12 @@
     "rootDir": "."
   },
   "include": [
-    // Include root files
-    "./",
-    // Include all ts files
-    "./**/*.ts",
-    // Include all js files
-    "./**/*.js",
-    // Force the JSON files in the src folder to be included
-    "src/**/*.json"
+    "config/**/*.ts",
+    "config/**/*.js",
+    "src/**/*.ts",
+    "src/**/*.js",
+    "src/**/*.json",
+    "types/**/*.ts"
   ],
 
   "exclude": [
