Refactor Dockerfile and update package.json for improved build process
- Streamlined the Dockerfile by removing the conditional copy for the 'webynemec-strapi' directory and adjusting the copy commands for better efficiency.
- Updated the build command in package.json to set NODE_OPTIONS directly, enhancing memory management during the build process.
- Removed the nixpacks.toml file as it is no longer needed for the build configuration.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,12 +16,10 @@
     "rootDir": "."
   },
   "include": [
-    "config/**/*.ts",
-    "config/**/*.js",
-    "src/**/*.ts",
-    "src/**/*.js",
-    "src/**/*.json",
-    "types/**/*.ts"
+    "./",
+    "./**/*.ts",
+    "./**/*.js",
+    "src/**/*.json"
   ],
 
   "exclude": [
