Update tsconfig.json to include dist/**/*.js in the include section and refine exclude patterns
- Added "dist/**/*.js" to the include section to ensure JavaScript files in the distribution directory are considered during the build process.
- Removed "dist/" from the exclude section to allow for better inclusion of necessary files, while maintaining exclusions for admin, test, and plugin files.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,21 +19,17 @@
     "./",
     "./**/*.ts",
     "./**/*.js",
-    "src/**/*.json"
+    "src/**/*.json",
+    "dist/**/*.js"
   ],
 
   "exclude": [
     "node_modules/",
     "build/",
-    "dist/",
     ".cache/",
     ".tmp/",
-
-    // Do not include admin files in the server compilation
     "src/admin/",
-    // Do not include test files
     "**/*.test.*",
-    // Do not include plugins in the server compilation
     "src/plugins/**"
   ]
 }
