Add Cloudinary integration for image uploads and update environment configuration
- Added Cloudinary provider for image uploads in the Strapi configuration.
- Updated .env.example to include Cloudinary credentials.
- Modified middlewares.ts to enhance security policies for image sources.
- Updated package.json and package-lock.json to include necessary Cloudinary dependencies.

--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,11 @@ NODE_ENV=production
 # Frontend URL pro CORS (Vercel)
 FRONTEND_URL=https://webynemec.cz
 
+# Cloudinary - ukládání obrázků (zdarma: 25 GB storage, 25 GB bandwidth/měsíc)
+CLOUDINARY_NAME=your_cloud_name
+CLOUDINARY_KEY=your_api_key
+CLOUDINARY_SECRET=your_api_secret
+
 # Resend - odesílání emailů při nové poptávce (zdarma: 100/den, 3000/měsíc)
 RESEND_API_KEY=re_xxxx
 RESEND_FROM=Webynemec <noreply@webynemec.cz>
