--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@strapi/plugin-cloud": "5.36.0",
     "@strapi/plugin-users-permissions": "5.36.0",
+    "@strapi/provider-upload-cloudinary": "^5.36.0",
     "@strapi/strapi": "5.36.0",
     "better-sqlite3": "12.4.1",
     "pg": "^8.17.2",
